<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_radio"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="30sp" />

    <EditText
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginTop="10dp"
        android:hint="2114"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio1"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio2"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/buttonSave"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:onClick="onClickSave"
        style="@style/botones" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio3"
        android:id="@+id/textView15"
        android:layout_below="@+id/buttonSave"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio4"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView15"
        android:layout_alignLeft="@+id/textView15"
        android:layout_alignStart="@+id/textView15"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editAnchura"
        android:hint="50"
        android:layout_toRightOf="@id/textView16"
        android:layout_below="@id/textView15"
        android:inputType="number"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio5"
        android:id="@+id/textView17"
        android:layout_below="@+id/textView16"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editDiametro"
        android:hint="559"
        android:layout_toRightOf="@id/textView17"
        android:layout_below="@id/editAnchura"
        android:inputType="number"
        android:layout_marginLeft="12dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_convertir"
        android:id="@+id/buttonConvertir"
        style="@style/botones"
        android:layout_alignTop="@+id/textView16"
        android:layout_toRightOf="@+id/buttonSave"
        android:layout_toEndOf="@+id/buttonSave"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="onClickSave" />

</RelativeLayout>