<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/routes"
        android:id="@+id/text_titleRouteDetail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="30sp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/listView"
        android:layout_below="@+id/text_titleRouteDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/en_detalle"
        android:id="@+id/buttonVer"
        android:layout_below="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:onClick="onClickRoutes"
        style="@style/botones" />

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_ruta"
        android:id="@+id/buttonEliminar"
        android:layout_below="@+id/listView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="35dp"
        android:layout_marginTop="25dp"
        android:onClick="onClickRoutes"
        style="@style/botones" />

</RelativeLayout>