<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.onboardstats.MainActivity">

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/last_route"
        android:id="@+id/button_last_route"
        android:layout_below="@+id/button_start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        style="@style/botones" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/routes"
        android:id="@+id/button_routes"
        android:layout_below="@+id/button_last_route"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        style="@style/botones" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/change_radio"
        android:id="@+id/button_change_radio"
        android:layout_below="@+id/button_routes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        style="@style/botones" />

    <Button
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/button_help"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:drawableLeft="@android:drawable/ic_menu_help"
        android:paddingLeft="6dp"
        android:onClick="onClick"
        style="@style/botones" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/button_start"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:drawableLeft="@android:drawable/stat_sys_data_bluetooth"
        android:drawableRight="@android:drawable/stat_sys_data_bluetooth"
        android:onClick="onClick"
        style="@style/botones" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/imagen"
        android:layout_marginTop="5dp" />
</RelativeLayout>
