<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_route_detail"
        android:id="@+id/text_titleRouteDetail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/date"
        android:id="@+id/textView"
        android:layout_below="@+id/text_titleRouteDetail"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:paddingLeft="20dp"
        android:textSize="22sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/start_hour"
        android:id="@+id/textView2"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:textSize="22sp"
        android:textStyle="italic"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/length"
        android:id="@+id/textView3"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:textSize="22sp"
        android:textStyle="italic"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/average_speed"
        android:id="@+id/textView4"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:textSize="22sp"
        android:textStyle="italic"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/distance"
        android:id="@+id/textView5"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:textSize="22sp"
        android:textStyle="italic"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textDate"
        android:layout_alignTop="@+id/textView"
        android:textSize="22sp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textHour"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:textSize="22sp"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textLength"
        android:textSize="22sp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textSpeed"
        android:textSize="22sp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginLeft="195dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textDistance"
        android:textSize="22sp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginLeft="220dp"
        android:layout_marginRight="20dp" />
</RelativeLayout>